--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>HW 11</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <div class="container">
+      <form class="form">
+        <input
+          type="text"
+          class="input"
+          name="inputField"
+          placeholder="Search images..."
+        />
+        <button type="submit" class="btn">Search</button>
+      </form>
 
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
+      <!-- Loader element to show during API request -->
+      <div class="loader hidden"></div>
 
-    <load src="./partials/footer.html" />
+      <!-- Gallery for displaying search results -->
+      <ul class="gallery-list"></ul>
+    </div>
 
-    <script type="module" src="main.js"></script>
+    <!-- Script for main functionality -->
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
+
